--- a/src/styles/_dashboard.scss
+++ b/src/styles/_dashboard.scss
@@ -44,7 +44,7 @@
                 }
             }
             .widgetCircle{
-                padding: relative;
+                position: relative;
                 @include square(5rem);
                 border-radius: 50%;
                 display: grid;
@@ -62,6 +62,67 @@
                 }
             }
 
+        }
+    }
+    .graph-container{
+        @include flex(row,unset,unset,2rem);
+        padding: 0 2rem 2rem 0;
+        >div{
+            background-color: white;
+            border-radius: 10px;
+        }
+        .revenue-chart{
+            width: 100%;
+            padding: 1rem 3rem;
+            >h2 {
+                @include heading;
+                margin: 1rem 0 2rem 0.25rem;
+                text-align: center;
+            }
+        }
+        .dashboard-categories{
+            width: 100%;
+            max-width: 16rem;
+            @include flex(column,center,unset,0);
+            padding-bottom: 2rem;
+            >h2{
+                @include heading;
+                margin: 1.5rem 0 2rem 0;
+                text-align: center;
+            }
+            >div{
+                overflow-y: auto;
+                padding-left: 0.5rem;
+            }
+            // dsaads
+            .category-item{
+                width: 100%;
+                @include flex(row,space-between);
+                padding:1rem;
+                >h5{
+                    letter-spacing: 1px;
+                    font-weight: 300;
+
+                }
+                >div{
+                    
+                    margin-left: auto;
+                    width: 6rem;
+                    background-color: rgb(217,217,217);
+                    border-radius: 20px;
+                    height: 0.5rem;
+                    flex: none;
+                    >div{
+                        height: 100%;
+                        border-radius: 20px;
+                    }
+                }
+                >span{
+                    font-size: 0.8rem;
+                    font-weight: 700;
+                }
+            }
+            
         }
     }
 }
